k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-frontend-deployment
  namespace: langgraph-env
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: ai-frontend
  template:
    metadata:
      labels:
        app: ai-frontend
    spec:
      containers:
      - name: ai-frontend-container
        image: piyush20062004/ai-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5173
